# MelodySpringBackEnd

./: .gitignore  MusicGenStreamer.py  app.py  auditcrafttest.py  processing_util.py  pyproject.toml
canvas/curve/: Bezier.py
templates/: index.html
